--- a/HTTP_Server/Output/HTTP_Server.build_log.htm
+++ b/HTTP_Server/Output/HTTP_Server.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.28.0.0
 Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Juan Varela UPM Flex license: MDK Professional 5.28 (Flex) (mdk_pro) 
+License Information: Juan Varela UPM Flex license: MDK Professional 5.28 (Flex) (mdk_pro) Operation stops: 8 Mar 2024
  
 Tool Versions:
 Toolchain:       MDK Professional 5.28 (Flex)  Version: 5.28.0.0
@@ -21,8 +21,8 @@ Target DLL:      CMSIS_AGDI.dll V1.31.18.0
 Dialog DLL:      TARMP1.DLL V1.26.0.0
  
 <h2>Project:</h2>
-C:\Users\Juan\Desktop\PRACTICA\ISE2022_grupoLAB_20_Santamaria_Varela\HTTP_Server\HTTP_Server.uvprojx
-Project File Date:  03/20/2022
+C:\Users\Juan\Desktop\ISE2022_grupoLAB_20_Santamaria_VarelaSNTP\HTTP_Server\HTTP_Server.uvprojx
+Project File Date:  03/27/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
@@ -53,16 +53,11 @@ custom translating @.\Auto_FcArm_Cmd.inp...
 Custom: C:\Keil_v5\ARM\Bin\FCARM.exe @.\Auto_FcArm_Cmd.inp
 FCARM FILE CONVERTER V2.57
 Completed 19 File(s), Ratio 85%
+compiling RTX_Conf_CM.c...
 compiling Web.c...
-compiling RTC.c...
-RTC.c(14): warning:  #550-D: variable "minval"  was set but never used
-  	uint32_t minval;
-RTC.c(15): warning:  #177-D: variable "i"  was declared but never referenced
-  	int i;
-RTC.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=41568 RO-data=32596 RW-data=192 ZI-data=28296  
-".\Output\HTTP_Server.axf" - 0 Error(s), 2 Warning(s).
+Program Size: Code=43068 RO-data=32640 RW-data=204 ZI-data=32148  
+".\Output\HTTP_Server.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -100,6 +95,7 @@ Package Vendor: Keil
                 Middleware for Keil MDK-Professional and MDK-Plus
    * Component: CORE Variant: Release Version: 6.7.7
    * Component: ETH Version: 6.7.7
+   * Component: SNTP Client Version: 6.7.7
    * Component: Web Server Compact Version: 6.7.7
    * Component: TCP Version: 6.7.7
    * Component: UDP Version: 6.7.7
@@ -131,39 +127,42 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.5.0
 
    * Component: ARM::CMSIS:RTOS:Keil RTX:4.82.0
-      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\MailQueue.c
-      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\Mutex.c
-      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\MsgQueue.c
-      Source file:   CMSIS\RTOS\RTX\SRC\ARM\SVC_Table.s
-      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\MemPool.c
-      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\Thread.c
-      Library file:  CMSIS\RTOS\RTX\LIB\ARM\RTX_CM3.lib
-      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\Semaphore.c
-      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\Timer.c
-      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\main.c
       Include file:  CMSIS\RTOS\RTX\INC\cmsis_os.h
       Source file:   CMSIS\RTOS\RTX\Templates\RTX_Conf_CM.c
       Include file:  CMSIS\RTOS\RTX\UserCodeTemplates\osObjects.h
+      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\main.c
+      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\Timer.c
+      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\Thread.c
+      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\Mutex.c
+      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\MsgQueue.c
+      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\MemPool.c
+      Library file:  CMSIS\RTOS\RTX\LIB\ARM\RTX_CM3.lib
+      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\MailQueue.c
+      Source file:   CMSIS\RTOS\RTX\SRC\ARM\SVC_Table.s
+      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\Semaphore.c
 
    * Component: Keil.MDK-Pro Net_v6::Network:CORE:Release:6.7.7
       Library file:  Network_v6\Lib\ARM\Net_CM3_L.lib
-      Source file:   Network_v6\Config\Net_Config.c
       Include file:  Network_v6\Include\rl_net.h
+      Source file:   Network_v6\Config\Net_Config.c
 
    * Component: Keil.MDK-Pro Net_v6::Network:Interface:ETH:6.7.7
       Include file:  Network_v6\Config\Net_Config_ETH.h
 
+   * Component: Keil.MDK-Pro Net_v6::Network:Service:SNTP Client:6.7.7
+      Include file:  Network_v6\Config\Net_Config_SNTP_Client.h
+
    * Component: Keil.MDK-Pro Net_v6::Network:Service:Web Server Compact:6.7.7
-      Source file:   Network_v6\Template\HTTP_Server_Multiuser.c
-      Source file:   Network_v6\Template\HTTP_Server_Access.c
-      Source file:   Network_v6\Template\HTTP_Server_Error.c
       Include file:  Network_v6\Config\Net_Config_HTTP_Server.h
+      Source file:   Network_v6\Template\HTTP_Server_Access.c
+      Source file:   Network_v6\Template\HTTP_Server_Multiuser.c
+      Source file:   Network_v6\Template\HTTP_Server_Error.c
       Source file:   Network_v6\Template\HTTP_Server_CGI.c
 
    * Component: Keil.MDK-Pro Net_v6::Network:Socket:TCP:6.7.7
-      Include file:  Network_v6\Config\Net_Config_TCP.h
-      Source file:   Network_v6\Template\TCP_Socket_Server.c
       Source file:   Network_v6\Template\TCP_Socket_Client.c
+      Source file:   Network_v6\Template\TCP_Socket_Server.c
+      Include file:  Network_v6\Config\Net_Config_TCP.h
 
    * Component: Keil.MDK-Pro Net_v6::Network:Socket:UDP:6.7.7
       Source file:   Network_v6\Template\UDP_Socket.c
@@ -191,10 +190,10 @@ Package Vendor: Keil
       Source file:   RTE_Driver\PIN_LPC17xx.c
 
    * Component: Keil::Device:Startup:1.0.0
-      Include file:  Device\Include\LPC17xx.h
-      Source file:   Device\Source\ARM\startup_LPC17xx.s
       Include file:  RTE_Driver\Config\RTE_Device.h
+      Source file:   Device\Source\ARM\startup_LPC17xx.s
       Source file:   Device\Source\system_LPC17xx.c
+      Include file:  Device\Include\LPC17xx.h
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
