--- a/HTTP_Server/Web/index.htm
+++ b/HTTP_Server/Web/index.htm
@@ -54,7 +54,7 @@
                               "/leds.cgi">LED</a> | <a href=
                               "/lcd.cgi">LCD</a> | <a href=
                               "/ad.cgi">AD</a> | <a href=
-                              "/buttons.cgi">Button</a> | <a href=
+                              "/buttons.cgi">Reloj</a> | <a href=
                               "/language.cgi">Language</a> |
                               <a href="/tcp.cgi">Statistics</a>
                               ]</b></font></td>
