--- a/HTTP_Server/Output/HTTP_Server.build_log.htm
+++ b/HTTP_Server/Output/HTTP_Server.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.28.0.0
 Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Juan Varela UPM Flex license: MDK Professional 5.28 (Flex) (mdk_pro) Operation stops: 8 Mar 2024
+License Information: Juan Varela UPM Flex license: MDK Professional 5.28 (Flex) (mdk_pro) 
  
 Tool Versions:
 Toolchain:       MDK Professional 5.28 (Flex)  Version: 5.28.0.0
@@ -21,8 +21,8 @@ Target DLL:      CMSIS_AGDI.dll V1.31.18.0
 Dialog DLL:      TARMP1.DLL V1.26.0.0
  
 <h2>Project:</h2>
-C:\Users\Juan\Desktop\Fase2\HTTP_Server\HTTP_Server.uvprojx
-Project File Date:  04/28/2022
+E:\ISE\Proyecto\HTTP_Server\HTTP_Server.uvprojx
+Project File Date:  04/29/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
@@ -39,17 +39,20 @@ llblue.jpg,
 logo.gif,
 pabb.gif,
 ganancia.cgi,
-buttons.cgi,
-buttons.cgx 
+buttons.cgi 
 TO Web.c RTE NOPRINT ROOT(Web)
 custom translating @.\Auto_FcArm_Cmd.inp...
 Custom: C:\Keil_v5\ARM\Bin\FCARM.exe @.\Auto_FcArm_Cmd.inp
 FCARM FILE CONVERTER V2.57
-Completed 12 File(s), Ratio 85%
+Completed 11 File(s), Ratio 85%
 compiling Web.c...
+compiling HTTP_Server_CGI.c...
+HTTP_Server_CGI.c(47): warning:  #177-D: variable "P2"  was declared but never referenced
+  static uint8_t P2;
+HTTP_Server_CGI.c: 1 warning, 0 errors
 linking...
-Program Size: Code=42768 RO-data=23024 RW-data=204 ZI-data=31364  
-".\Output\HTTP_Server.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=44048 RO-data=22640 RW-data=220 ZI-data=31380  
+".\Output\HTTP_Server.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -119,24 +122,24 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.5.0
 
    * Component: ARM::CMSIS:RTOS:Keil RTX:4.82.0
-      Include file:  CMSIS\RTOS\RTX\UserCodeTemplates\osObjects.h
-      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\main.c
-      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\MemPool.c
-      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\MsgQueue.c
       Include file:  CMSIS\RTOS\RTX\INC\cmsis_os.h
-      Source file:   CMSIS\RTOS\RTX\Templates\RTX_Conf_CM.c
-      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\MailQueue.c
-      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\Semaphore.c
       Library file:  CMSIS\RTOS\RTX\LIB\ARM\RTX_CM3.lib
       Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\Timer.c
-      Source file:   CMSIS\RTOS\RTX\SRC\ARM\SVC_Table.s
+      Source file:   CMSIS\RTOS\RTX\Templates\RTX_Conf_CM.c
       Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\Thread.c
+      Source file:   CMSIS\RTOS\RTX\SRC\ARM\SVC_Table.s
+      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\MailQueue.c
+      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\MsgQueue.c
+      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\Semaphore.c
+      Include file:  CMSIS\RTOS\RTX\UserCodeTemplates\osObjects.h
+      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\main.c
       Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\Mutex.c
+      Source file:   CMSIS\RTOS\RTX\UserCodeTemplates\MemPool.c
 
    * Component: Keil.MDK-Pro Net_v6::Network:CORE:Release:6.7.7
-      Source file:   Network_v6\Config\Net_Config.c
       Include file:  Network_v6\Include\rl_net.h
       Library file:  Network_v6\Lib\ARM\Net_CM3_L.lib
+      Source file:   Network_v6\Config\Net_Config.c
 
    * Component: Keil.MDK-Pro Net_v6::Network:Interface:ETH:6.7.7
       Include file:  Network_v6\Config\Net_Config_ETH.h
@@ -145,16 +148,16 @@ Package Vendor: Keil
       Include file:  Network_v6\Config\Net_Config_SNTP_Client.h
 
    * Component: Keil.MDK-Pro Net_v6::Network:Service:Web Server Compact:6.7.7
-      Source file:   Network_v6\Template\HTTP_Server_Multiuser.c
-      Include file:  Network_v6\Config\Net_Config_HTTP_Server.h
-      Source file:   Network_v6\Template\HTTP_Server_Access.c
-      Source file:   Network_v6\Template\HTTP_Server_Error.c
       Source file:   Network_v6\Template\HTTP_Server_CGI.c
+      Source file:   Network_v6\Template\HTTP_Server_Access.c
+      Include file:  Network_v6\Config\Net_Config_HTTP_Server.h
+      Source file:   Network_v6\Template\HTTP_Server_Error.c
+      Source file:   Network_v6\Template\HTTP_Server_Multiuser.c
 
    * Component: Keil.MDK-Pro Net_v6::Network:Socket:TCP:6.7.7
-      Source file:   Network_v6\Template\TCP_Socket_Client.c
       Source file:   Network_v6\Template\TCP_Socket_Server.c
       Include file:  Network_v6\Config\Net_Config_TCP.h
+      Source file:   Network_v6\Template\TCP_Socket_Client.c
 
    * Component: Keil.MDK-Pro Net_v6::Network:Socket:UDP:6.7.7
       Include file:  Network_v6\Config\Net_Config_UDP.h
@@ -183,10 +186,10 @@ Package Vendor: Keil
 
    * Component: Keil::Device:Startup:1.0.0
       Include file:  Device\Include\LPC17xx.h
-      Source file:   Device\Source\ARM\startup_LPC17xx.s
-      Source file:   Device\Source\system_LPC17xx.c
       Include file:  RTE_Driver\Config\RTE_Device.h
-Build Time Elapsed:  00:00:00
+      Source file:   Device\Source\system_LPC17xx.c
+      Source file:   Device\Source\ARM\startup_LPC17xx.s
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
